Modificaciones menores al index.html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taller</title>
+    <title>ListaDeptos</title>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/Style.css">
 </head>
+
 <body onload="agregarElementos()">
    <div class="container">
        <div class="row cargar_lista mt-3 justify-content-around">
@@ -15,7 +16,7 @@
                    <div class="form-group">
                        <label for="sel1"> Seleccione un departamento: </label>
                        <select id="sel1" class="form-control">
-                           <option>Escoja una opcion</option>                           
+                           <option>Escoja una opción</option>                           
                        </select>
                    </div>
                </form>
